--- a/ChainServer/user.ipynb
+++ b/ChainServer/user.ipynb
@@ -271,12 +271,157 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 8) Register your own MCP server + chain\n\n",
+    "Use the MCP connector to wrap your own MCP server as an agent, inject it as a resource, and wire it into a chain. Replace the base URL/tool paths with your server details.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flowforge import ChainContext, FlowForge\n",
+    "from flowforge.agents.base import AgentResult\n",
+    "from flowforge.connectors.base import ConnectorConfig\n",
+    "from flowforge.connectors.mcp import MCPAgent\n",
+    "\n",
+    "# Configure your MCP endpoint/tool details here\n",
+    "forge_mcp = FlowForge(name=\"mcp_demo\")\n",
+    "\n",
+    "@forge_mcp.agent(name=\"custom_mcp_agent\", description=\"Wraps your MCP server\")\n",
+    "class CustomMCPAgent(MCPAgent):\n",
+    "    # Swap base_url/tool endpoints for your MCP server\n",
+    "    connector_config = ConnectorConfig(\n",
+    "        name=\"my_mcp_server\",\n",
+    "        base_url=\"http://localhost:8000\",  # e.g., http://127.0.0.1:8000\n",
+    "        api_key=None,\n",
+    "    )\n",
+    "\n",
+    "    async def fetch(self, query: str, **kwargs) -> AgentResult:\n",
+    "        # Example call into MCP; adjust endpoint/payload per your server's tools\n",
+    "        payload = await self.connector.request(\n",
+    "            \"/tools/search\",\n",
+    "            data={\"query\": query, **kwargs},\n",
+    "        )\n",
+    "\n",
+    "        return AgentResult(\n",
+    "            data=payload,\n",
+    "            source=self.connector_config.name,\n",
+    "            query=query,\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "async def create_mcp_agent():\n",
+    "    agent = CustomMCPAgent()\n",
+    "    await agent.initialize()\n",
+    "    return agent\n",
+    "\n",
+    "\n",
+    "async def cleanup_mcp_agent(agent: CustomMCPAgent):\n",
+    "    await agent.cleanup()\n",
+    "\n",
+    "\n",
+    "# Make the agent available to steps via dependency injection\n",
+    "forge_mcp.register_resource(\n",
+    "    \"mcp_agent\",\n",
+    "    factory=create_mcp_agent,\n",
+    "    cleanup=cleanup_mcp_agent,\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9) Build a chain that uses your MCP agent\n\n",
+    "These steps ingest a query, call the MCP agent via the injected resource, and build a response. Replace the logic with your own transforms or merges.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@forge_mcp.step(name=\"ingest_request\", produces=[\"mcp_query\"])\n",
+    "async def ingest_request(ctx: ChainContext):\n",
+    "    ctx.set(\"mcp_query\", ctx.get(\"mcp_query\", \"demo MCP query\"))\n",
+    "    return {\"mcp_query\": ctx.get(\"mcp_query\")}\n",
+    "\n",
+    "\n",
+    "@forge_mcp.step(\n",
+    "    name=\"fetch_from_mcp\",\n",
+    "    deps=[\"ingest_request\"],\n",
+    "    resources=[\"mcp_agent\"],\n",
+    "    produces=[\"mcp_raw\"],\n",
+    ")\n",
+    "async def fetch_from_mcp(ctx: ChainContext, mcp_agent: CustomMCPAgent):\n",
+    "    result = await mcp_agent.fetch(ctx.get(\"mcp_query\"))\n",
+    "    ctx.set(\"mcp_raw\", result.data)\n",
+    "    return {\"mcp_raw\": result.data, \"mcp_source\": result.source}\n",
+    "\n",
+    "\n",
+    "@forge_mcp.step(\n",
+    "    name=\"build_custom_response\",\n",
+    "    deps=[\"fetch_from_mcp\"],\n",
+    "    produces=[\"mcp_response\"],\n",
+    ")\n",
+    "async def build_custom_response(ctx: ChainContext):\n",
+    "    raw = ctx.get(\"mcp_raw\", {})\n",
+    "    response = {\n",
+    "        \"summary\": f\"Fetched from MCP: {raw}\",\n",
+    "        \"query\": ctx.get(\"mcp_query\"),\n",
+    "    }\n",
+    "    ctx.set(\"mcp_response\", response)\n",
+    "    return response\n",
+    "\n",
+    "\n",
+    "@forge_mcp.chain(name=\"mcp_chain\", description=\"Custom chain backed by MCP\")\n",
+    "class MCPChain:\n",
+    "    steps = [\"ingest_request\", \"fetch_from_mcp\", \"build_custom_response\"]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10) Run the MCP-backed chain\n\n",
+    "Pass your own query payload. Cleanup releases the MCP connection and any registered resources.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def run_mcp_chain():\n",
+    "    result = await forge_mcp.run(\n",
+    "        \"mcp_chain\",\n",
+    "        initial_data={\"mcp_query\": \"search Apple earnings\"},\n",
+    "    )\n",
+    "\n",
+    "    print(f\"Success: {result['success']}\")\n",
+    "    print(result[\"context\"][\"data\"].get(\"mcp_response\"))\n",
+    "\n",
+    "    await forge_mcp.cleanup_resources()\n",
+    "\n",
+    "\n",
+    "asyncio.run(run_mcp_chain())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Next steps\n",
     "\n",
     "- Swap in your own step logic or data agents and rerun the notebook\n",
     "- Use `forge.register_resource` to inject shared clients (LLMs, DBs, caches)\n",
+    "- Point the MCP example at your server/tooling and customize the response builder\n",
     "- Run the same chains via CLI: `flowforge run demo_chain --module user`\n",
-    "- Explore `examples/` and `flowforge/USER_GUIDE.md` for more patterns"
+    "- Explore `examples/` and `flowforge/USER_GUIDE.md` for more patterns\n"
    ]
   }
  ],
